--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
 			<img src="https://images.pexels.com/photos/2582510/pexels-photo-2582510.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Chicago">
 		  </div>
 
-		  <div class="item active fifth-slide">
+		  <div class="item fifth-slide">
 			<img src="https://images.pexels.com/photos/531321/pexels-photo-531321.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Los Angeles">
 		  </div>
 		</div>
