--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
 			<img src="https://images.pexels.com/photos/2582510/pexels-photo-2582510.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Chicago">
 		  </div>
 	  
-		  <div class="item third-slide">
+		  <div class="item active third-slide">
 			<img src="https://images.pexels.com/photos/2582546/pexels-photo-2582546.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="New York">
 		  </div>
 
